remove isNew bool field in the token response
